<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dos Juegos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Dos Juegos</string>
    <string name="main_description">Elegir juego para jugar</string>
    <string name="main_button_1">Adivinar un numero</string>
    <string name="main_button_2">Adivinar un button</string>
    <string name="title_activity_juego_primero">Primero Juego</string>
    <string name="title_activity_juego_segundo">Segundo Juego</string>
	<string name="primero_title">Adivinar un numero</string>
	<string name="primero_description">Escribir un numero entre 1 y 100 y pulse el boton.</string>
	<string name="segundo_title"> Calcular ecuacion</string>
	<string name="edittext_numero2"> (3 x 3 + 1)/ 2 x 4 - 19</string>
	<string name= "button_numero1">1</string>
	<string name= "button_numero2">2</string>
	<string name= "button_numero3">3</string>
	<string name= "button_numero4">4</string>
	
</resources>
