<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dosjuegos.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:paddingBottom="20dp"
        android:text="@string/main_title" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:paddingBottom="20dp"
        android:text="@string/main_description" />
        
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/buttonMain1"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/main_button_1" />
        <Button
            android:id="@+id/buttonMain2" 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/main_button_2" />
    </LinearLayout>
       
</LinearLayout>
